# meteor

./: CMakeLists.txt
cmake/: optix.cmake
sandbox/00_hello_world/: CMakeLists.txt  hello.cu  hello.h  main.cpp
src/: CMakeLists.txt
src/meteor/core/: aabb.h  macro.h  shape.cpp  shape.h  util.h
src/meteor/cuda/: buffer.h  util.h
src/meteor/optix/: context.cpp  context.h  geometry_accel.cpp  geometry_accel.h  instance.cpp  instance.h  instance_accel.cpp  instance_accel.h  module.cpp  module.h  pipeline.cpp  pipeline.h  program.cpp  program.h  sbt.h
